--- a/index.html
+++ b/index.html
@@ -10,43 +10,43 @@
     <table id = "board">
         <tr>
             <td>
-                <input type = "text" id = "1" onclick="clicked()">
+                <button id = "1" onclick="clicked()"></button>
             </td>
                 
             <td>
-                <input type = "text" id = "2" onclick = "clicked()">
+                <button id = "2" onclick = "clicked()"></button>
             </td>
 
             <td>
-                <input type = "text" id = "3" onclick = "clicked()">
-            </td>
-        </tr>
-
-        <tr>
-            <td>
-                <input type = "text" id = "4" onclick = "clicked()">
-            </td>
-
-            <td>
-                <input type = "text" id = "5" onclick = "clicked()">
-            </td>
-
-            <td>
-                <input type = "text" id = "6" onclick = "clicked()">
+                <button id = "3" onclick = "clicked()"></button>
             </td>
         </tr>
 
         <tr>
             <td>
-                <input type = "text" id = "7" onclick = "clicked()">
+                <button id = "4" onclick = "clicked()"></button>
             </td>
 
             <td>
-                <input type = "text" id = "8" onclick = "clicked()">
+                <button id = "5" onclick = "clicked()"></button>
             </td>
 
             <td>
-                <input type = "text" id = "9" onclick = "clicked()">
+                <button id = "6" onclick = "clicked()"></button>
+            </td>
+        </tr>
+
+        <tr>
+            <td>
+                <button id = "7" onclick = "clicked()"></button>
+            </td>
+
+            <td>
+                <button id = "8" onclick = "clicked()"></button>
+            </td>
+
+            <td>
+                <button id = "9" onclick = "clicked()"></button>
             </td>
         </tr>
     </table>
