--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel = "stylesheet" href = "styles.css">
 </head>
 <body>
+    <p id = "title"></p>
     <table id = "board">
         <tr>
             <td>
@@ -50,6 +51,9 @@
             </td>
         </tr>
     </table>
+    <p id = "print"></p>
+    <p id = "winner"></p>
+    <button id = "reset" onclick="resetGame()">Reset</button>
     <script src = "script.js"></script>
 </body>
 </html>
