--- a/index.html
+++ b/index.html
@@ -1,59 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe game</title>
-    <link rel = "stylesheet" href = "styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    <p id = "title"></p>
-    <table id = "board">
-        <tr>
-            <td>
-                <button id = "1" onclick="clicked()"></button>
-            </td>
-                
-            <td>
-                <button id = "2" onclick = "clicked()"></button>
-            </td>
+    <div class="container">
+        <h1 style="text-align: center">Tic Tac Toe Game</h1>
+        <p id="title"></p>
+        <table id="board">
+            <tr>
+                <td>
+                    <button id="1" onclick="clicked()"></button>
+                </td>
 
-            <td>
-                <button id = "3" onclick = "clicked()"></button>
-            </td>
-        </tr>
+                <td>
+                    <button id="2" onclick="clicked()"></button>
+                </td>
 
-        <tr>
-            <td>
-                <button id = "4" onclick = "clicked()"></button>
-            </td>
+                <td>
+                    <button id="3" onclick="clicked()"></button>
+                </td>
+            </tr>
 
-            <td>
-                <button id = "5" onclick = "clicked()"></button>
-            </td>
+            <tr>
+                <td>
+                    <button id="4" onclick="clicked()"></button>
+                </td>
 
-            <td>
-                <button id = "6" onclick = "clicked()"></button>
-            </td>
-        </tr>
+                <td>
+                    <button id="5" onclick="clicked()"></button>
+                </td>
 
-        <tr>
-            <td>
-                <button id = "7" onclick = "clicked()"></button>
-            </td>
+                <td>
+                    <button id="6" onclick="clicked()"></button>
+                </td>
+            </tr>
 
-            <td>
-                <button id = "8" onclick = "clicked()"></button>
-            </td>
+            <tr>
+                <td>
+                    <button id="7" onclick="clicked()"></button>
+                </td>
 
-            <td>
-                <button id = "9" onclick = "clicked()"></button>
-            </td>
-        </tr>
-    </table>
-    <p id = "print"></p>
-    <p id = "winner"></p>
-    <button id = "reset" onclick="resetGame()">Reset</button>
-    <script src = "script.js"></script>
+                <td>
+                    <button id="8" onclick="clicked()"></button>
+                </td>
+
+                <td>
+                    <button id="9" onclick="clicked()"></button>
+                </td>
+            </tr>
+        </table>
+        <p id="print"></p>
+        <p id="winner"></p>
+        <button id="reset" onclick="resetGame()">Reset</button>
+    </div>
+    <script src="script.js"></script>
 </body>
+
 </html>
