removed unnecessary elements from the screen such as array holding values of each cell, result display after every turn and other such small changes have been made

--- a/index.html
+++ b/index.html
@@ -15,43 +15,43 @@
         <table id="board">
             <tr>
                 <td>
-                    <button id="1" onclick="clicked()"></button>
+                    <button id="1"  class = "cell" onclick="clicked()"></button>
                 </td>
 
                 <td>
-                    <button id="2" onclick="clicked()"></button>
+                    <button id="2" class = "cell" onclick="clicked()"></button>
                 </td>
 
                 <td>
-                    <button id="3" onclick="clicked()"></button>
-                </td>
-            </tr>
-
-            <tr>
-                <td>
-                    <button id="4" onclick="clicked()"></button>
-                </td>
-
-                <td>
-                    <button id="5" onclick="clicked()"></button>
-                </td>
-
-                <td>
-                    <button id="6" onclick="clicked()"></button>
+                    <button id="3" class = "cell" onclick="clicked()"></button>
                 </td>
             </tr>
 
             <tr>
                 <td>
-                    <button id="7" onclick="clicked()"></button>
+                    <button id="4" class = "cell" onclick="clicked()"></button>
                 </td>
 
                 <td>
-                    <button id="8" onclick="clicked()"></button>
+                    <button id="5" class = "cell" onclick="clicked()"></button>
                 </td>
 
                 <td>
-                    <button id="9" onclick="clicked()"></button>
+                    <button id="6" class = "cell" onclick="clicked()"></button>
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <button id="7" class = "cell" onclick="clicked()"></button>
+                </td>
+
+                <td>
+                    <button id="8" class = "cell" onclick="clicked()"></button>
+                </td>
+
+                <td>
+                    <button id="9" class = "cell" onclick="clicked()"></button>
                 </td>
             </tr>
         </table>
@@ -61,5 +61,4 @@
     </div>
     <script src="script.js"></script>
 </body>
-
 </html>
