added strikethrough lines

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <div class="container">
         <h1 style="text-align: center">Tic Tac Toe Game</h1>
         <p id="title"></p>
+        <div id = "slantLineLR" class = "lines"></div>
+        <div id = "slantLineRL" class = "lines"></div>
+        <div id = "horizontalLine" class = "lines"></div>
+        <div id = "verticalLine" class = "lines"></div>
         <table id="board">
             <tr>
                 <td>
